ensure that container-lg is not too wide between md and lg screen sizes

--- a/src/layout/_container.scss
+++ b/src/layout/_container.scss
@@ -32,6 +32,9 @@
 .container {
   &.container-lg {
     max-width: $large-screen;
+    @include resp(1240px) {
+      width: 85%;
+    }
   }
 }
 
